# docs/swagger.json
@@ -204,6 +204,33 @@
                 }
             }
         },
+        "/products": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "product"
+                ],
+                "summary": "get products",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/usecase.FindProductOutput"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
         "/users/me": {
             "get": {
                 "security": [
@@ -381,11 +408,11 @@
         "entities.Product": {
             "type": "object",
             "properties": {
-                "avalibility": {
+                "availability": {
                     "type": "integer"
                 },
-                "company": {
-                    "$ref": "#/definitions/entities.Company"
+                "caseTypeID": {
+                    "type": "integer"
                 },
                 "companyID": {
                     "type": "integer"
@@ -401,6 +428,9 @@
                 },
                 "price": {
                     "type": "number"
+                },
+                "productCategory": {
+                    "type": "string"
                 },
                 "productID": {
                     "type": "integer"
@@ -485,6 +515,17 @@
                 },
                 "title": {
                     "type": "string"
+                }
+            }
+        },
+        "usecase.FindProductOutput": {
+            "type": "object",
+            "properties": {
+                "products": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/entities.Product"
+                    }
                 }
             }
         },
