# internal/entities/product.go
@@ -1,16 +1,19 @@
 package entities
 
 type (
+	ProductRepo interface {
+		GetAll() ([]Product, error)
+	}
 	Product struct {
-		ProductID   int     `gorm:"column:product_id;primaryKey;autoIncrement"`
-		CompanyID   *int    `gorm:"column:company_id"`
-		Name        string  `gorm:"column:name;type:character varying(255);not null"`
-		Price       float64 `gorm:"column:price;type:numeric(10,2)"`
-		Description string  `gorm:"column:description;type:text"`
-		Image       string  `gorm:"column:image;type:character varying(255)"`
-		Avalibility *int    `gorm:"column:avalibility"`
-
-		Company *Company `gorm:"foreignKey:CompanyID"`
+		ProductID       uint    `gorm:"column:product_id;primaryKey;autoIncrement"`
+		CompanyID       *int    `gorm:"column:company_id"`
+		Name            string  `gorm:"column:name;type:varchar(255);not null"`
+		Price           float64 `gorm:"column:price;type:numeric(10,2)"`
+		Description     string  `gorm:"column:description;type:text"`
+		Image           string  `gorm:"column:image;type:varchar(255)"`
+		Availability    int     `gorm:"column:avalibility"`
+		ProductCategory string  `gorm:"column:product_category;type:varchar(50);default:merch"`
+		CaseTypeID      *int    `gorm:"column:case_type_id"`
 	}
 )
 
